<resources>
    <string name="app_name">Tenrigangkae.id</string>
    <string name="www_sunistheworld_com">www.sunistheworld.com</string>
    <string name="pt_synergy_utility_network">&#169; PT. Synergy Utility Network</string>
    <string name="desa_tenrigangkae">Tenrigangkae</string>
    <string name="aplikasi">DeSUN</string>
    <string name="developed_by">Developed by</string>
    <string name="form_login">Form Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="masyarakat">Masyarakat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pengajuan_pengantar_dusun">Pengajuan Pengantar Dusun</string>
    <string name="status_pengajuan_surat">Status Pengajuan Surat</string>
    <string name="penerimaan_bantuan_sosial">Penerimaan Bantuan sosial</string>
    <string name="login">Login</string>
    <string name="aparatur_desa">Aparatur Desa</string>
    <string name="form_pengajuan_n_surat_pengantar_dusun">Form Pengajuan\n Surat Pengantar Dusun</string>
    <string name="masukkan_nomor_nik">Masukkan Nomor NIK</string>
    <string name="pilih_jenis_surat">Pilih Jenis Surat</string>
    <string name="masukkan_alasan_mengurus_surat">Masukkan Alasan Mengurus Surat</string>
    <string name="file_ktp_anda_akan_terhapus_otomatis_jika_surat_pengantar_telah_diterbitkan_data_anda_tetap_aman">File KTP anda akan terhapus otomatis jika surat pengantar telah diterbitkan, data anda tetap aman.</string>
    <string name="kirim_data">Kirim Data</string>
    <string name="lihat_status_disini">Lihat Status Disini</string>
    <string name="pengajuan_n_surat_pengantar_dusun_n_berhasil_dilakukan">Pengajuan\n Surat Pengantar Dusun\n Berhasil Dilakukan</string>
    <string name="daftar_pengajuan_surat">Daftar Pengajuan\n Surat Pengantar Dusun</string>
    <string name="daftar_penerima_bantuan_sosial">Daftar Penerima Bantuan Sosial</string>
    <string name="title_activity_home_headman">HomeHeadmanActivity</string>
    <string name="administrasi_desa">Administrasi Desa</string>
    <string name="aparat_pemerintah_desa">Aparat Pemerintah Desa</string>
    <string name="dashboard_n_kepala_desa">Dashboard\nKepala Desa</string>
    <string name="dashboard_n_kepala_dusun">Dashboard\nKepala Dusun</string>
    <string name="tekan_tombol_dibawah_ini_jika_data_telah_lengkap_terinput">Tekan tombol dibawah ini jika data telah lengkap terinput</string>
    <string name="tenrigangkae">Tenrigangkae</string>
    <string name="wahyu_febri">Wahyu Febri</string>
    <string name="statistik_desa">Statistik Desa</string>
    <string name="_2500">2500</string>
    <string name="_1200">1200</string>
    <string name="_700">700</string>
    <string name="_350">350</string>
    <string name="jumlah_npenduduk_perempuan">Jumlah\nPenduduk Perempuan</string>
    <string name="jumlah_npenduduk">Jumlah\nPenduduk</string>
    <string name="jumlah_npenduduk_dewasa">Jumlah\nPenduduk Dewasa</string>
    <string name="jumlah_npenduduk_laki_laki">Jumlah\nPenduduk laki-laki</string>
    <string name="jumlah_penduduk_ngol_darah_a">Jumlah Penduduk\nGol. Darah A</string>
    <string name="jumlah_penduduk_gol_darah_b">Jumlah Penduduk\nGol. Darah B</string>
    <string name="_125">125</string>
    <string name="jumlah_penduduk_gol_darah_o">Jumlah Penduduk\n Gol. Darah O</string>
    <string name="jumlah_penduduk_gol_darah_ab">Jumlah Penduduk\n Gol. Darah AB</string>
    <string name="wilayah_desa">Wilayah Desa</string>
    <string name="website_desa">Website Desa</string>
    <string name="www_tenrigangkae_id">www.tenrigangkae.id</string>
    <string name="telepon_desa">Telepon Desa</string>
    <string name="_086346236725">086346236725</string>
    <string name="peraturan_desa">Peraturan Desa</string>
    <string name="keputusan_kepala_desa">Keputusan Kepala Desa</string>
    <string name="daftar_pengajuan_nsurat_pengantar_dusun">Daftar Pengajuan\nSurat Pengantar Dusun</string>
    <string name="terimakasih_ntelah_senantiasa_mengabdi_nuntuk_masyarakat_desa_tenrigangkae">Terimakasih\ntelah senantiasa mengabdi\nuntuk masyarakat Desa Tenrigangkae.</string>
    <string name="surat_pengantar_dusun_telah_dibuat_nuntuk_proses_selanjutnya_nmasyarakat_dapat_mengunjungi_nkantor_desa_untuk_mencetak_surat">Surat Pengantar Dusun Telah Dibuat\nUntuk proses selanjutnya\nmasyarakat dapat mengunjungi\nkantor desa untuk mencetak surat.</string>
    <string name="ok_kembali_ke_dashboard">OK, kembali ke Dashboard</string>
    <string name="pemeriksaan_data_nsurat_pengantar_dusun">Pemeriksaan Data\nSurat Pengantar Dusun</string>
    <string name="nomor_nik_pemohon">Nomor NIK Pemohon</string>
    <string name="_78467563474746856">78467563474746856</string>
    <string name="nama_pemohon">Nama Pemohon</string>
    <string name="bambang_sutejo">Bambang Sutejo</string>
    <string name="surat_yang_akan_diurus">Surat yang akan diurus</string>
    <string name="saya_ingin_mengurus_surat_keterangan_untuk_usaha_saya_bang_mohon_dibantu_surat_pengantarnya">Saya ingin mengurus surat keterangan untuk usaha saya bang, mohon dibantu surat pengantarnya</string>
    <string name="keterangan">Keterangan</string>
    <string name="foto_ktp">Foto KTP</string>
    <string name="tekan_tombol_dibawah_ini_jika_data_telah_anda_setujui">Tekan tombol dibawah ini jika data telah anda setujui</string>
    <string name="buatkan_surat_pengantar">Buatkan Surat Pengantar</string>
    <string name="surat_keterangan_pengantar_desa_bombongi">Surat Keterangan Pengantar Dusun</string>
    <string name="surat_keterangan_usaha">Surat Keterangan Usaha</string>
    <string name="surat_pengantar_dusun_abc">Surat Pengantar Dusun ABC</string>
    <string name="bantuan_sosial_jamkesmas">Bantuan Sosial JAMKESMAS</string>
    <string name="ishak_s_kom">Ishak, S Kom</string>
    <string name="nama_warga">Nama Warga</string>
    <string name="perdes_spj_tentang_keuangan_desa_tahun_2016">Perdes SPJ Tentang Keuangan Desa Tahun 2016</string>
    <string name="_1_09_01_2016">1 / 09–01–2016</string>
    <string name="ditetapkan">Ditetapkan :</string>
    <string name="sekretaris_desa">Sekretaris Desa</string>
    <string name="mustahiq_s_adm">Mustahiq S.Adm</string>
    <string name="nip_197905062010011007">NIP :197905062010011007</string>
    <string name="nik_5201140506790001">NIK :5201140506790001</string>
    <string name="bantuan_sosial_bpnt">Bantuan Sosial BPNT</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="no_signal">No Signal</string>
    <string name="aktif">Aktif</string>
    <string name="nip">Nip \t : %1s</string>
    <string name="nik">Nik \t : %1s</string>
    <string name="describe_detail_social_assistance">JAMKESMAS adalah sebuah program jaminan kesehatan untuk warga Indonesia yang memberikan perlindungan sosial dibidang kesehatan.</string>
    <string name="bantuan_sosial">Bantuan Sosial</string>
    <string name="surat_keterangan_pengantar_desa_padaelo">Surat Keterangan Pengantar Desa Padaelo</string>
    <string name="untuk_pengurusan_bantuan_sosial_dan_pencairan_dana_bantuan_silahkan_menghubungi_aparatur_desa_tenrigangkae_atau_datang_langsung_ke_kantor_desa_tenrigangkae">Untuk pengurusan bantuan sosial dan pencairan dana bantuan silahkan menghubungi aparatur Desa Tenrigangkae atau datang langsung ke Kantor Desa Tenrigangkae.</string>
    <string name="data_kosong">Data belum ada</string>
    <string name="dion">Dion</string>
    <string name="ambil_gambar_ktp">Ambil gambar KTP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

</resources>